app/assets/stylesheets/application.scss
@import 'bootstrap';
@import 'bootstrap-datetimepicker';
@import 'bootstrap/glyphicons';
@import "headings";
@import "font-awesome";
@import "form-styles";
@import "cta-styles";
@import "home-page";
@import "fast-track";
@import "admin";
@import "workshop";
@import "corporate";
@import "kids-coding";
@import "schools";
@import "misc-pages";
@import "blog";
@import "post";
@import "bookings";
@import "fast-track-payments";
@import "shared";
@import "timeline";
@import "dataTables";
@import "jquery-ui";

html, body {
  height: 100%;
  font-family: 'Montserrat', sans-serif;
}

body {
  background-color: #FFF;
}

.wrapper {
  min-height: 100%;
  position: relative;
}

a:hover {
  text-decoration: none;
}

.anchor {
  padding: 1px;
  margin-bottom: 60px;
}
.admin-content {
  padding-top: 81px;
}
.content {
  padding-top: 81px;
  padding-bottom: 1000px;
  @media only screen and (max-width: 767px) {
    padding-bottom: 1750px;
  }
}

.footer {
  background-color: #000;
  color: #FFF;
  position: absolute;
  bottom: 0;
  width: 100%;
  padding-top: 50px;
  padding-bottom: 50px;
  height: 1000px;
  @media only screen and (max-width: 767px) {
    height: 1750px;
  }

  ul {
    padding: 0px;
    margin-top: 10px;
    margin-bottom: 10px;
  }
  h2 {
    margin-bottom: 20px;
  }
  li {
    list-style-type: none;
    color: #ADADAD;
    margin-top: 5px;
    margin-bottom: 5px;
  }
  .course-link {
    color: #FFF;
  }
  .course-link:hover {
    color: #38A9C7;
    text-decoration: none;
  }
  .footer-page-link {
    color: #ADADAD;
  }
  .footer-page-link:hover {
    color: #38A9C7;
    text-decoration: none;
  }
  input {
    margin: 0px;
  }
  .hs_email > label {
    display: inline-block !important;
  }
}

a {
  color: #38A9C7;
}
a:hover {
  color: #EC5037;
}
.img-circle {
  border-radius: 50%;
}
.social-media {
  padding-left: 10px;
  padding-right: 10px;
}

